[project]
name = "pdfraven"
version = "3.2.0"
description = "Advanced, multi-threaded PDF password recovery tool."
authors = [
    { name = "Ecnord", email = "noxel.ecnord@example.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pikepdf>=6.0.0",
    "rich>=13.0.0",
]

[project.scripts]
pdfraven = "pdfraven.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdfraven*"]
