[project]
name = "pdfraven"
version = "3.2.0"
description = "Advanced, multi-threaded PDF password recovery tool."
authors = [
    { name = "Ecnord", email = "derrickom005@gmail.com" }, # Updated email
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pikepdf>=6.0.0",
    "rich>=13.0.0",
]

[project.scripts]
pdfraven = "main:main" # Changed to main:main as it's the root now

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory
include = ["*"] # Include all modules in the current directory as the package
